--- a/views/index.html
+++ b/views/index.html
@@ -33,9 +33,17 @@
         </div>
       </div>
       <!-- albums! -->
+
       <div id='albums'>
+        <script id="albums-template" type="text/x-handlebars-template">
+        <!-- {{#each sampleAlbums}}
+        {{artistName}}
+        {{name}}
+        {{releaseDate}}
+        {{genres}}
 
 
+        {{/each}} -->
 
 
           <!-- one album -->
@@ -56,17 +64,17 @@
                       <ul class="list-group">
                         <li class="list-group-item">
                           <h4 class='inline-header'>Album Name:</h4>
-                          <span class='album-name'>Ladyhawke</span>
+                          <span class='album-name'>{{name}}</span>
                         </li>
 
                         <li class="list-group-item">
                           <h4 class='inline-header'>Artist Name:</h4>
-                          <span class='artist-name'>Ladyhawke</span>
+                          <span class='artist-name'>{{artistName}}</span>
                         </li>
 
                         <li class="list-group-item">
                           <h4 class='inline-header'>Released date:</h4>
-                          <span class='album-releaseDate'>2008, November 18</span>
+                          <span class='album-releaseDate'>{{releaseDate}}</span>
                         </li>
                       </ul>
                     </div>
@@ -84,9 +92,10 @@
           <!-- end one album -->
 
 
-
+      </script>
 
       </div>
+
     </section>
 
     <!-- begin songModal: this is not visible until you call .modal() on it -->
